[package]
name = "pid-flamegraph"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = { version = "0.2.1" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
svg = "0.18.0"
hashbrown = "0.15.5"

